# chaos-crew-dca

./: .gitignore  CMakeLists.txt  COMPILAR_WINDOWS.md  CONTRIBUTING.md  CREAR_RELEASE.md  ENLACE_ITCH_IO.txt  ENTREGA_FINAL.md  INSTRUCCIONES_FINALES_RELEASE.txt  MENSAJE_PARA_COMPAÑERO.txt  Makefile  Makefile_chaos_crew_final  Makefile_f  PRUEBA.SH  README.md  README_ENTREGA.txt  build.sh  chaos-crew-dca_0.1.0.orig.tar.xz  chaos-crew.desktop  entregable1.md  entregable2.md  generar_instalables.bat  generar_instalables.sh  imgui.ini  mapa.xml  mapa1.xml  package.sh  run-wsl.sh  test_ccache.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-deb.yml  ci-tests.yml  release.yml
debian/: README.Debian  README.source  chaos-crew-dca.cron.d.ex  control  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/.debhelper/chaos-crew-dca/: dbgsym-build-ids
debian/.debhelper/chaos-crew-dca/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/chaos-crew-dca/dbgsym-root/usr/share/doc/: chaos-crew-dca-dbgsym
debian/chaos-crew-dca/DEBIAN/: control  md5sums
debian/chaos-crew-dca/usr/share/doc-base/: chaos-crew-dca.chaos-crew-dca
debian/chaos-crew-dca/usr/share/doc/chaos-crew-dca/: copyright
debian/upstream/: metadata.ex
docs/: DocExtensa-Proyecto.md  HITO2.md  HITO3.md  INTERNATIONALIZATION.md
entrega-hito1/: Entrega-Hito1.md  LEEME.txt  chaos-crew-linux
mapas/: mapa.xml  mapa0.xml  mapa1.xml  mapa10.xml  mapa11.xml  mapa2.xml  mapa3.xml  mapa4.xml  mapa5.xml  mapa6.xml  mapa7.xml  mapa8.xml  mapa9.xml  progress.txt
po/: chaos-crew.pot
po/en_US/LC_MESSAGES/: chaos-crew.po
po/es_ES/LC_MESSAGES/: chaos-crew.po
releases/: README.md
releases/v0.1.0-alpha/: GDD.md  README.md
src/: main.cpp
src/components/: Button.hpp  Mandos.hpp  Obstacle.hpp  Patron.hpp  Platform.hpp  Player.hpp  PlayerAnimations.hpp  Position.hpp  Solid.hpp  Sprite.hpp  Trap.hpp  Velocity.hpp
src/core/: GameState.cpp  GameState.hpp  ResourceManager.cpp  ResourceManager.h  StateMachine.cpp  StateMachine.hpp
src/debug/: DebugUI.cpp  DebugUI.hpp
src/entities/: ButtonFactory.cpp  ButtonFactory.hpp  DoorFactory.cpp  DoorFactory.hpp  Platform.cpp  Platform.hpp  PlatformFactory.cpp  PlatformFactory.hpp  Player.cpp  Player.hpp  PlayerFactory.cpp  PlayerFactory.hpp  SpikeFactory.cpp  SpikeFactory.hpp  WheelFactory.cpp  WheelFactory.hpp
src/locale/: Locale.cpp  Locale.hpp
src/physics/: Collision.cpp  Collision.hpp  Physics.cpp  Physics.hpp
src/states/: GameOverState.cpp  GameOverState.hpp  GameplayState.cpp  GameplayState.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.hpp
src/systems/: AnimationSystem.cpp  AnimationSystem.hpp  ButtonSystem.cpp  ButtonSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  InputSystem.cpp  InputSystem.hpp  LoadMapSystem.cpp  LoadMapSystem.hpp  MovementSystem.cpp  MovimentSystem.hpp  PatronSystem.cpp  PatronSystem.hpp  PhysicsConfig.hpp  RenderSystem.cpp  RenderSystem.hpp  TrollSystem.cpp  TrollSystem.hpp  WinSystem.cpp  WinSystem.hpp
src/utils/: Logger.cpp  Logger.hpp  MapProgress.cpp  MapProgress.hpp
tests/: CMakeLists.txt  collision_tests.cpp  entity_tests.cpp  integration_tests.cpp  map_tests.cpp  run_tests.sh  state_machine_tests.cpp
